testsuite/poke.pkl/cast-array-diag-5.pk
/* { dg-do compile } */

defvar a = [[1,2],[3,4]] as int[2][2] /* { dg-error "" } */
